tests/invalid/invalid_class_body/main.py
class Foo:
    x: list[int] = [5]
